# fastSHT

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  SHT.py  compile.sh  compile_ifort.sh  configure.sh
docker/: Dockerfile
scripts/: benchmark.py  benchmarks.py  demo.ipynb  demo.py  nproc.py  run_nproc.sh  test_all.py  test_comprehensive.py  test_fixEB.py
scripts/obsolete/: demo.ipynb
src/: alm2cl_TEB.f90  cl2alm_TEB.f90  compute_fft.f90  convert_alm.f90  fft_mapping.f90  filt_alm.f90  get_plm_recursive.f90  kind_map  norm_alm.f90  sht_core.f90  sht_data_init.f90  sht_data_module.f90  sht_main.f90
